--- a/_config.yml
+++ b/_config.yml
@@ -83,14 +83,14 @@ share_jia: true
 #具体请参考wiki：https://github.com/litten/hexo-theme-yilia/wiki/
 
 #1、多说
-duoshuo: true
+duoshuo: false
 
 #2、网易云跟帖
-wangyiyun: true
+wangyiyun: false
 
 #3、畅言
-changyan_appid: true
-changyan_conf: true
+changyan_appid: false
+changyan_conf: false
 
 #4、Disqus 在hexo根目录的config里也有disqus_shortname字段，优先使用yilia的
 disqus: false
@@ -139,3 +139,6 @@ aboutme:
   wechat: dnh20091206
 
 canvas_nest: true
+
+busuanzi:
+  enable: true
