--- a/_config.yml
+++ b/_config.yml
@@ -149,6 +149,6 @@ valine:
   appkey: VszAhjmXdkoNUDRyO0URdndV
   verify: false #验证码，verify和notify这两个最好就别动了
   notify: false #评论回复提醒
-  avatar: https://avatars.githubusercontent.com/u/57223903?s=460&u=6af037d861ac65ffc7916d60edbe0c541d1cc9d3&v=4 #评论列表头像样式：''/mm/identicon/monsterid/wavatar/retro/hide
-  # avatar: mm #评论列表头像样式：''/mm/identicon/monsterid/wavatar/retro/hide
-  placeholder: Just go go #评论框占位符
+  avatar: "" #评论列表头像样式：''/mm/identicon/monsterid/wavatar/retro/hide
+  placeholder: 精彩的评论从您输入开始 #评论框占位符
+  avatar_cdn: https://avatars.githubusercontent.com/u/57223903?s=460&u=6af037d861ac65ffc7916d60edbe0c541d1cc9d3&v=4
