--- a/_config.yml
+++ b/_config.yml
@@ -60,7 +60,7 @@ weixin: /assets/img/wechat.jpg
 # 目录设定：0-不显示目录； 1-文章对应的md文件里有toc:true属性，才有目录； 2-所有文章均显示目录
 toc: 1
 # 根据自己的习惯来设置，如果你的目录标题习惯有标号，置为true即可隐藏hexo重复的序号；否则置为false
-toc_hide_index: true
+toc_hide_index: false
 # 目录为空时的提示
 toc_empty_wording: "目录，不存在的…"
 
@@ -70,7 +70,14 @@ top: true
 # Miscellaneous
 baidu_analytics: ""
 google_analytics: ""
-favicon: /favicon.png
+
+favicon:
+  small: /img/favicon.ico
+  #medium: /images/favicon-32x32-next.png
+  medium: /img/favicon.ico
+  apple_touch_icon: /img/apple-touch-icon-next.png
+  safari_pinned_tab: /img/logo.svg
+  #android_manifest: /manifest.json
 
 #你的头像url
 avatar: https://avatars.githubusercontent.com/u/57223903?s=460&u=6af037d861ac65ffc7916d60edbe0c541d1cc9d3&v=4
@@ -143,7 +150,7 @@ canvas_nest: true
 busuanzi:
   enable: true
 
-# Valine https://valine.js.org
+# Valine 评论系统 https://valine.js.org
 # valine:
 #   appid: k8iXy6BCJ5fbB1TB8DbrUPr9-gzGzoHsz
 #   appkey: VszAhjmXdkoNUDRyO0URdndV
