add the top and encryption of articles

--- a/_config.yml
+++ b/_config.yml
@@ -177,3 +177,11 @@ gitalk:
   ClientSecret: 60de8d60e1a711ebd05ca957ffd3d2816ddd121e
   labels: gitalk
   distractionFreeMode: true
+
+# 文章加密
+encrypt:
+  enable: true
+  abstract: 这是一篇加密文章，内容可能是个人情感宣泄或者收费技术。如果你非常好奇，请与我联系。
+  message: 输入密码，查看文章。
+  # default_abstract: 这是一篇加密文章，内容可能是个人情感宣泄或者收费技术。如果你确实想看，请与我联系。
+  # default_message: 输入密码，查看文章。
