--- a/_config.yml
+++ b/_config.yml
@@ -68,7 +68,7 @@ toc: 1
 # 根据自己的习惯来设置，如果你的目录标题习惯有标号，置为true即可隐藏hexo重复的序号；否则置为false
 toc_hide_index: false
 # 目录为空时的提示
-toc_empty_wording: "目录，不存在的…"
+toc_empty_wording: "抱歉·私密文章不支持目录"
 
 # 是否有快速回到顶部的按钮
 top: true
