--- a/_config.yml
+++ b/_config.yml
@@ -185,3 +185,6 @@ encrypt:
   message: 输入密码，查看文章。
   # default_abstract: 这是一篇加密文章，内容可能是个人情感宣泄或者收费技术。如果你确实想看，请与我联系。
   # default_message: 输入密码，查看文章。
+
+# 文章字数统计
+word_count: True
