--- a/_config.yml
+++ b/_config.yml
@@ -188,3 +188,13 @@ encrypt:
 
 # 文章字数统计
 word_count: True
+
+# 版权声明
+#在需要进行版权声明的文章的md文件头部，设置属性declare: true。
+#版权基础设定：0-关闭声明； 1-文章对应的md文件里有declare: true属性，才有版权声明； 2-所有文章均有版权声明
+declare:
+  declare_type: 1
+  licensee_url: https://creativecommons.org/licenses/by-nc-sa/4.0/ #当前应用的版权协议地址。
+  licensee_name: "CC BY-NC-SA 4.0" #版权协议的名称
+  licensee_alias: "知识共享署名-非商业性使用-相同方式共享 4.0 国际许可协议" # alias别名
+  # licensee_img: /img/declare.png #版权协议的Logo
