--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
     "fetch-ie8": "^1.4.3",
     "file-loader": "^0.9.0",
     "js-cookie": "^2.1.3",
-    "photoswipe": "^4.1.1"
+    "photoswipe": "^4.1.1",
+    "tua-body-scroll-lock": "^1.2.1"
   },
   "config": {
     "commitizen": {
