--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "webpack": "^1.13.2"
   },
   "dependencies": {
+    "aplayer": "^1.10.1",
     "babel-core": "6.24.0",
     "babel-loader": "6.4.0",
     "babel-plugin-transform-runtime": "6.23.0",
