--- a/_config.yml
+++ b/_config.yml
@@ -66,12 +66,12 @@ weixin: /assets/img/wechat.jpg
 # 目录设定：0-不显示目录； 1-文章对应的md文件里有toc:true属性，才有目录； 2-所有文章均显示目录
 toc: 1
 # 根据自己的习惯来设置，如果你的目录标题习惯有标号，置为true即可隐藏hexo重复的序号；否则置为false
-toc_hide_index: true
+toc_hide_index: false
 # 目录为空时的提示
 toc_empty_wording: "抱歉·私密文章不支持目录"
 
 # 是否有快速回到顶部的按钮
-top: true
+top: false
 
 # Miscellaneous
 baidu_analytics: ""
